--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Service Status</title>
 </head>
 <body>
-    <p>oi</p>
+    <main>
+        <article>
+            <div>AWS</div>
+            <div class="status_block"></div>
+        </article>
+    </main>
 </body>
 </html>
