--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 <body>
     <main>
         <article>
-            <div>AWS</div>
-            <div class="status_block"></div>
+            <div class="titulo" id="aws">AWS</div><div class="titulo" id="oracle">Oracle</div><div class="titulo" id="jira">Jira</div>
+
+
+            <div class="status_block_aws"></div>
+            <div class="quadrado_on_or_off"></div>
+
+            <div class="status_block_oracle"></div>
+            <div class="quadrado_on_or_off"></div>
+
+            <div class="status_block_jira"></div>
+            <div class="quadrado_on_or_off"></div>
         </article>
     </main>
 </body>
