--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <title>Service Status</title>
 </head>
 <body>
+    <h1>Dashboard de disponíbilidade de ferramentas</h1>
     <main>
         <article>
-            <div class="titulo" id="aws">AWS</div><div class="titulo" id="oracle">Oracle</div><div class="titulo" id="jira">Jira</div>
-
-
+            <h2>AWS</h2>
             <div class="status_block_aws"></div>
-            <div class="quadrado_on_or_off"></div>
-
+        </article>
+        <article>
+            <h2>OCI</h2>
             <div class="status_block_oracle"></div>
-            <div class="quadrado_on_or_off"></div>
-
+        </article>
+        <article>
+            <h2>Jira</h2>
             <div class="status_block_jira"></div>
-            <div class="quadrado_on_or_off"></div>
         </article>
     </main>
 </body>
