--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
     <title>Service Status</title>
 </head>
 <body>
-    <h1>Dashboard de disponíbilidade de ferramentas</h1>
+    <header>
+        <img src="logos.jpeg" alt="Logos PicPay e Original">    
+        <h1>Dashboard de observabilidade de ferramentas</h1>
+    </header>
     <main>
         <article>
             <h2>AWS</h2>
-            <div class="status_block_aws"></div>
+            <div id="status_block_aws"></div>
         </article>
         <article>
             <h2>OCI</h2>
-            <div class="status_block_oracle"></div>
+            <div id="status_block_oracle"></div>
         </article>
         <article>
             <h2>Jira</h2>
-            <div class="status_block_jira"></div>
+            <div id="status_block_jira"></div>
         </article>
     </main>
 </body>
