--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Service Status</title>
 </head>
 <body>
+    <div id="ball1"></div>
+    <div id="ball2"></div>
+    <div id="ball3"></div>
+    <div id="ball4"></div>
     <header>
         <img src="logos.jpeg" alt="Logos PicPay e Original">    
         <h1>Dashboard de observabilidade de ferramentas</h1>
