--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </article>
         <article>
             <h2>OCI</h2>
-            <div id="status_block_oracle"></div>
+            <div id="status_block_oci"></div>
         </article>
         <article>
             <h2>Jira</h2>
