--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <div id="ball3"></div>
     <div id="ball4"></div>
     <header>
-        <img src="logos.jpeg" alt="Logos PicPay e Original">    
+        <img src="logos.png" alt="Logos PicPay e Original">    
         <h1>Dashboard de observabilidade de ferramentas</h1>
     </header>
     <main>
         <article>
             <h2>AWS</h2>
-            <div id="status_block_aws"></div>
+            <div id="status_block_aws" class="status_block"></div>
         </article>
         <article>
             <h2>OCI</h2>
-            <div id="status_block_oracle"></div>
+            <div id="status_block_oracle" class="status_block"></div>
         </article>
         <article>
             <h2>Jira</h2>
-            <div id="status_block_jira"></div>
+            <div id="status_block_jira" class="status_block"></div>
         </article>
     </main>
 </body>
