--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
         </article>
         <article>
             <h2>OCI</h2>
-<<<<<<< HEAD
-            <div id="status_block_oracle" class="status_block"></div>
-=======
-            <div id="status_block_oci"></div>
->>>>>>> bf84e883af19bb14c129dea913f043e1872ee2be
+            <div id="status_block_oci" class="status_block"></div>
         </article>
         <article>
             <h2>Jira</h2>
