--- a/index.html
+++ b/index.html
@@ -12,22 +12,87 @@
     <div id="ball2"></div>
     <div id="ball3"></div>
     <div id="ball4"></div>
+    <div id="ball5"></div>
+
     <header>
-        <img src="logos.png" alt="Logos PicPay e Original">    
+        <img src="logo.png" alt="Logo PicPay e logo Banco Original" id="img_logo">    
         <h1>Dashboard de observabilidade de ferramentas</h1>
     </header>
     <main>
         <article>
             <h2>AWS</h2>
+            <div class="div_status_i">
+                <p class="status">Status</p>
+                <img src="information.png" alt="informações de ocorrências passadas" id="img_i">
+            </div>
             <div id="status_block_aws" class="status_block"></div>
+            <ul class="time">
+                <li>60s</li>
+                <li>45s</li>
+                <li>30s</li>
+                <li>15s</li>
+                <li>Now</li>
+            </ul>
+            <ul class="label">
+                <li>
+                    Up
+                    <div class="label_up"></div>
+                </li>
+                <li>
+                    Down
+                    <div class="label_down"></div>
+                </li>
+            </ul>
         </article>
         <article>
             <h2>OCI</h2>
+            <div class="div_status_i">
+                <p class="status">Status</p>
+                <img src="information.png" alt="informação sobre ocorrências passadas" id="img_i">
+            </div>
             <div id="status_block_oci" class="status_block"></div>
+            <ul class="time">
+                <li>60s</li>
+                <li>45s</li>
+                <li>30s</li>
+                <li>15s</li>
+                <li>Now</li>
+            </ul>
+            <ul class="label">
+                <li>
+                    Up
+                    <div class="label_up"></div>
+                </li>
+                <li>
+                    Down
+                    <div class="label_down"></div>
+                </li>
+            </ul>
         </article>
         <article>
             <h2>Jira</h2>
+            <div class="div_status_i">
+                <p class="status">Status</p>
+                <img src="information.png" alt="informação sobre ocorrências passadas" id="img_i">
+            </div>
             <div id="status_block_jira" class="status_block"></div>
+            <ul class="time">
+                <li>60s</li>
+                <li>45s</li>
+                <li>30s</li>
+                <li>15s</li>
+                <li>Now</li>
+            </ul>
+            <ul class="label">
+                <li>
+                    Up
+                    <div class="label_up"></div>
+                </li>
+                <li>
+                    Down
+                    <div class="label_down"></div>
+                </li>
+            </ul>
         </article>
     </main>
 </body>
