--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             </ul>
             <ul class="label">
                 <li>
-                    Up
-                    <div class="label_up"></div>
+                    On
+                    <div class="label_on"></div>
                 </li>
                 <li>
-                    Down
-                    <div class="label_down"></div>
+                    Off
+                    <div class="label_off"></div>
                 </li>
             </ul>
         </article>
@@ -60,12 +60,12 @@
             </ul>
             <ul class="label">
                 <li>
-                    Up
-                    <div class="label_up"></div>
+                    On
+                    <div class="label_on"></div>
                 </li>
                 <li>
-                    Down
-                    <div class="label_down"></div>
+                    Off
+                    <div class="label_off"></div>
                 </li>
             </ul>
         </article>
@@ -85,12 +85,12 @@
             </ul>
             <ul class="label">
                 <li>
-                    Up
-                    <div class="label_up"></div>
+                    On
+                    <div class="label_on"></div>
                 </li>
                 <li>
-                    Down
-                    <div class="label_down"></div>
+                    Off
+                    <div class="label_off"></div>
                 </li>
             </ul>
         </article>
