--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="ball5"></div>
 
     <header>
-        <img src="logo.png" alt="Logo PicPay e logo Banco Original" id="img_logo">    
+        <img src="logo.png" alt="Logo PicPay and logo Banco Original" id="img_logo">    
         <h1>Dashboard de observabilidade de ferramentas</h1>
     </header>
     <main>
@@ -23,10 +23,10 @@
             <h2>AWS</h2>
             <div class="div_status_i">
                 <p class="status">Status</p>
-                <img src="information.png" alt="informações de ocorrências passadas" id="img_i">
+                <img src="information.png" alt="information about past incidents" id="img_i">
             </div>
             <div id="status_block_aws" class="status_block"></div>
-            <ul class="time">
+            <ul class="timer">
                 <li>60s</li>
                 <li>45s</li>
                 <li>30s</li>
@@ -51,7 +51,7 @@
                 <img src="information.png" alt="informação sobre ocorrências passadas" id="img_i">
             </div>
             <div id="status_block_oci" class="status_block"></div>
-            <ul class="time">
+            <ul class="timer">
                 <li>60s</li>
                 <li>45s</li>
                 <li>30s</li>
@@ -76,7 +76,7 @@
                 <img src="information.png" alt="informação sobre ocorrências passadas" id="img_i">
             </div>
             <div id="status_block_jira" class="status_block"></div>
-            <ul class="time">
+            <ul class="timer">
                 <li>60s</li>
                 <li>45s</li>
                 <li>30s</li>
