--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
     <header>
         <img src="logo.png" alt="Logo PicPay and logo Banco Original" id="img_logo">    
-        <h1>Dashboard de observabilidade de ferramentas</h1>
+        <h1>Tool Observability Dashboard</h1>
     </header>
     <main>
         <article>
             <h2>AWS</h2>
             <div class="div_status_i">
                 <p class="status">Status</p>
-                <img src="information.png" alt="information about past incidents" id="img_i">
+                <img src="information.png" alt="information about past incidents" class="img_i">
             </div>
             <div id="status_block_aws" class="status_block"></div>
             <ul class="timer">
@@ -48,7 +48,7 @@
             <h2>OCI</h2>
             <div class="div_status_i">
                 <p class="status">Status</p>
-                <img src="information.png" alt="informação sobre ocorrências passadas" id="img_i">
+                <img src="information.png" alt="information about past incidents" class="img_i">
             </div>
             <div id="status_block_oci" class="status_block"></div>
             <ul class="timer">
@@ -73,7 +73,7 @@
             <h2>Jira</h2>
             <div class="div_status_i">
                 <p class="status">Status</p>
-                <img src="information.png" alt="informação sobre ocorrências passadas" id="img_i">
+                <img src="information.png" alt="information about past incidents" class="img_i">
             </div>
             <div id="status_block_jira" class="status_block"></div>
             <ul class="timer">
