--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="div_status_i">
                 <p class="status">Status</p>
                 <img src="information.png" alt="information about past incidents" class="img_i">
+                <div id="past_data_aws"></div>
             </div>
             <div id="status_block_aws" class="status_block"></div>
             <ul class="timer">
@@ -49,6 +50,7 @@
             <div class="div_status_i">
                 <p class="status">Status</p>
                 <img src="information.png" alt="information about past incidents" class="img_i">
+                <div id="past_data_aws"></div>
             </div>
             <div id="status_block_oci" class="status_block"></div>
             <ul class="timer">
@@ -74,6 +76,7 @@
             <div class="div_status_i">
                 <p class="status">Status</p>
                 <img src="information.png" alt="information about past incidents" class="img_i">
+                <div id="past_data_aws"></div>
             </div>
             <div id="status_block_jira" class="status_block"></div>
             <ul class="timer">
