--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h2>Jira</h2>
             <div class="div_status_i">
                 <p class="status">Status</p>
-                <img src="information.png" alt="information about past incidents" class="img_i" onclick="close()">
+                <img src="information.png" alt="information about past incidents" class="img_i" onclick="open()">
                 <div id="past_data_aws"></div>
             </div>
             <div class="pop_up"></div>
