--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
             <h2>AWS</h2>
             <div class="div_status_i">
                 <p class="status">Status</p>
-                <img src="information.png" alt="information about past incidents" class="img_i">
-                <div id="past_data_aws"></div>
+                <div id="hover_aws">
+                    <img src="information.png" alt="information about past incidents" class="img_i" onclick="open()">
+                    <div id="past_data_aws"></div>
+                </div>
             </div>
-            <div class="pop_up"></div>
             <div id="status_block_aws" class="status_block"></div>
             <ul class="timer">
                 <li>60s</li>
@@ -52,11 +53,11 @@
             <h2>OCI</h2>
             <div class="div_status_i">
                 <p class="status">Status</p>
-                <img src="information.png" alt="information about past incidents" class="img_i">
-                <div id="past_data_aws"></div>
+                <div id="hover_oci">
+                    <img src="information.png" alt="information about past incidents" class="img_i" onclick="open()">
+                    <div id="past_data_oci"></div>
+                </div>
             </div>
-            <div class="pop_up"></div>
-
             <div id="status_block_oci" class="status_block"></div>
             <ul class="timer">
                 <li>60s</li>
@@ -78,12 +79,18 @@
         </article>
         <article>
             <h2>Jira</h2>
-            <div class="div_status_i">
+            <div class="div_status_i" >
                 <p class="status">Status</p>
-                <img src="information.png" alt="information about past incidents" class="img_i" onclick="open()">
-                <div id="past_data_aws"></div>
+                <div id="hover_jira">
+                    <button class="testezin">Teste</button>
+                    <img src="information.png" alt="information about past incidents" class="img_i" id="teste" >
+                    <div class="janela-modal" id="janela-modal"></div>
+                    <div class="modal">
+
+                    </div>
+                    <div id="past_data_jira"></div>
+                </div>
             </div>
-            <div class="pop_up"></div>
             <div id="status_block_jira" class="status_block"></div>
             <ul class="timer">
                 <li>60s</li>
@@ -104,15 +111,7 @@
             </ul>
         </article>
     </main>
-    <script>
-        let pop_up = document.getElementsByClassName("pop_up");
-        function open(){
-            pop_up.classList.add("open_pop_up");
-        }
-        function close(){
-            pop_up.classList.remove("open_pop_up");
-        }
-    </script>
+
 </body>
 
 </html>
