--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
             <div class="div_status_i">
                 <p class="status">Status</p>
                 <div id="hover_aws">
-                    <img src="information.png" alt="information about past incidents" class="img_i" onclick="open()">
+                    <div  onclick="abrirModal()" class="btn">
+                        <img src="information.png" alt="information about past incidents" class="img_i" id="teste">
+                        </div>
+                        <div class="janela-modal" id="janela-modal">
+                            <div class="modal">
+                                <button class="fechar" id="fechar">X</button>
+                                <h1>Janela Modal</h1>
+                                <p>
+                                    testando
+                                </p> 
+                            </div>
+                        </div>
+    
+                        <script src="script.js"></script>
                     <div id="past_data_aws"></div>
                 </div>
             </div>
@@ -54,7 +67,20 @@
             <div class="div_status_i">
                 <p class="status">Status</p>
                 <div id="hover_oci">
-                    <img src="information.png" alt="information about past incidents" class="img_i" onclick="open()">
+                    <div  onclick="abrirModal()" class="btn">
+                        <img src="information.png" alt="information about past incidents" class="img_i" id="teste">
+                        </div>
+                        <div class="janela-modal" id="janela-modal">
+                            <div class="modal">
+                                <button class="fechar" id="fechar">X</button>
+                                <h1>Janela Modal</h1>
+                                <p>
+                                    testando
+                                </p> 
+                            </div>
+                        </div>
+    
+                        <script src="script.js"></script>
                     <div id="past_data_oci"></div>
                 </div>
             </div>
@@ -82,12 +108,20 @@
             <div class="div_status_i" >
                 <p class="status">Status</p>
                 <div id="hover_jira">
-                    <button class="testezin">Teste</button>
-                    <img src="information.png" alt="information about past incidents" class="img_i" id="teste" >
-                    <div class="janela-modal" id="janela-modal"></div>
-                    <div class="modal">
-
+                    <div  onclick="abrirModal()" class="btn">
+                    <img src="information.png" alt="information about past incidents" class="img_i" id="teste">
                     </div>
+                    <div class="janela-modal" id="janela-modal">
+                        <div class="modal">
+                            <button class="fechar" id="fechar">X</button>
+                            <h1>Janela Modal</h1>
+                            <p>
+                                testando
+                            </p> 
+                        </div>
+                    </div>
+
+                    <script src="script.js"></script>
                     <div id="past_data_jira"></div>
                 </div>
             </div>
