--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <div class="div_status_i">
                 <p class="status">Status</p>
                 <div id="hover_aws">
-                    <div  onclick="abrirModal()" class="btn">
+                    <div  onclick="openModal()" class="btn">
                         <img src="information.png" alt="information about past incidents" class="img_i" id="teste">
                         </div>
-                        <div class="janela-modal" id="janela-modal">
+                        <div class="modal-window" id="modal-window">
                             <div class="modal">
-                                <button class="fechar" id="fechar">X</button>
+                                <button class="close" id="close">X</button>
                                 <h1>Janela Modal</h1>
                                 <p>
                                     testando
@@ -67,12 +67,12 @@
             <div class="div_status_i">
                 <p class="status">Status</p>
                 <div id="hover_oci">
-                    <div  onclick="abrirModal()" class="btn">
+                    <div  onclick="openModal()" class="btn">
                         <img src="information.png" alt="information about past incidents" class="img_i" id="teste">
                         </div>
-                        <div class="janela-modal" id="janela-modal">
+                        <div class="modal-window" id="modal-window">
                             <div class="modal">
-                                <button class="fechar" id="fechar">X</button>
+                                <button class="close" id="close">X</button>
                                 <h1>Janela Modal</h1>
                                 <p>
                                     testando
@@ -108,12 +108,12 @@
             <div class="div_status_i" >
                 <p class="status">Status</p>
                 <div id="hover_jira">
-                    <div  onclick="abrirModal()" class="btn">
+                    <div  onclick="openModal()" class="btn">
                     <img src="information.png" alt="information about past incidents" class="img_i" id="teste">
                     </div>
-                    <div class="janela-modal" id="janela-modal">
+                    <div class="modal-window" id="modal-window">
                         <div class="modal">
-                            <button class="fechar" id="fechar">X</button>
+                            <button class="close" id="close">X</button>
                             <h1>Janela Modal</h1>
                             <p>
                                 testando
