atualizando pop ub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <button class="close" id="close">X</button>
                                 <h1>Janela Modal</h1>
                                 <p>
-                                    testando
+                                    Informações a serem adicionadas.
                                 </p> 
                             </div>
                         </div>
@@ -75,7 +75,7 @@
                                 <button class="close" id="close">X</button>
                                 <h1>Janela Modal</h1>
                                 <p>
-                                    testando
+                                    Informações a serem adicionadas.
                                 </p> 
                             </div>
                         </div>
@@ -112,11 +112,11 @@
                     <img src="information.png" alt="information about past incidents" class="img_i" id="teste">
                     </div>
                     <div class="modal-window" id="modal-window">
-                        <div class="modal">
+                      <div class="modal">
                             <button class="close" id="close">X</button>
                             <h1>Janela Modal</h1>
                             <p>
-                                testando
+                                Informações a serem adicionadas.
                             </p> 
                         </div>
                     </div>
